--- a/app/Resources/views/popups/group_details.html.twig
+++ b/app/Resources/views/popups/group_details.html.twig
@@ -1,6 +1,17 @@
 <div class="edit_group">
     <div class="left">
         <header>
+            {% if is_granted('EDIT', group) %}
+            {{ form_start(form, {'action': path('edit_group', {'id': group.id}), 'attr': {'class': 'hidden'} }) }}
+                {{ form_widget(form.name) }}
+                {{ form_widget(form.description) }}
+                {% if is_granted('ROLE_ADMIN') %}
+                {{ form_widget(form.parent) }}
+                {% endif %}
+                {{ form_rest(form) }}
+            {{ form_end(form) }}
+            {% endif %}
+
             <a id="edit_group_close" href="#" class="close_modal close-modal"><i class="fa fa-times"></i></a>
             <p>{{ group.name }}</p>
             <i class="fa fa-angle-double-down"></i>
@@ -52,22 +63,22 @@
     </div>
 
     {% if is_granted('EDIT', group) %}
-    <ul class="icons right">
-        <li>
-            <a id="edit_group" href="#">
-                <i class="fa fa-edit"></i>
-            </a>
-        </li>
-        <li>
-            <a id="download_group" href="#">
-                <i class="fa fa-download"></i>
-            </a>
-        </li>
-        <li>
-            <a id="delete_group" href="#" data-url="{{ path('delete_group', {'id': group.id}) }}">
-                <i class="fa fa-trash"></i>
-            </a>
-        </li>
-    </ul>
+        <ul class="icons right">
+            <li>
+                <a id="edit" href="#">
+                    <i class="fa fa-edit"></i>
+                </a>
+            </li>
+            <li>
+                <a id="download" href="#">
+                    <i class="fa fa-download"></i>
+                </a>
+            </li>
+            <li>
+                <a id="delete_group" href="#" data-url="{{ path('delete_group', {'id': group.id}) }}">
+                    <i class="fa fa-trash"></i>
+                </a>
+            </li>
+        </ul>
     {% endif %}
 </div>
