Added new popup

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -103,5 +103,7 @@
 
 <section id="edit_group" class="edit_group_container hidden"></section>
 
+{{ include(':popups:join_group.html.twig') }}
+
 </body>
 </html>
