--- a/app/Resources/views/popups/group_users.html.twig
+++ b/app/Resources/views/popups/group_users.html.twig
@@ -10,3 +10,18 @@
         </a>
     </li>
 {% endfor %}
+
+<li class="separator">Nieuw toegevoegd</li>
+
+<li>
+    <div>
+        <p>Mary Doe</p>
+        <span>mary.doe@example.com</span>
+    </div>
+    <a href="#" class="rounded"><i class="fa fa-minus"></i></a>
+    <select name="roles" id="roles">
+        <option value="admin">Admin</option>
+        <option value="manager" selected>Member</option>
+        <option value="member">Manager</option>
+    </select>
+</li>
