--- a/app/Resources/views/popups/new_group.html.twig
+++ b/app/Resources/views/popups/new_group.html.twig
@@ -1,6 +1,6 @@
 <section id="new_group" class="new_group_container hidden">
 
-    <div class="new_group">
+    <div class="new_group_modal">
         <header>
             <a id="new_group_close" href="#" class="close_modal"><i class="fa fa-times"></i></a>
             <p>{{ 'NEW GROUP'|trans }}</p>
