--- a/app/Resources/views/popups/join_group.html.twig
+++ b/app/Resources/views/popups/join_group.html.twig
@@ -2,20 +2,23 @@
 
     <div class="join_group_modal">
         <header>
-            <a id="join_group_close" href="#" class="close_modal"><i class="fa fa-times"></i></a>
-            <p>Lidmaatschap aanvragen</p>
+            <a id="join_group_close" href="#" class="close_modal close-modal"><i class="fa fa-times"></i></a>
+            <p>{{ 'Lidmaatschap aanvragen'|trans }}</p>
         </header>
+
         <form action="">
             <div class="form_element">
-                <span>Naam group:</span>
-                <p>Data Management Landscape</p>
+                <span>{{ 'Naam group'|trans }}</span>
+                <p class="group-name"></p>
             </div>
+
             <div class="form_element">
-                <label for="personal_message">Persoonlijk bericht:</label>
-                <textarea id="personal_message" name="personal_message" cols="15" placeholder="Please..."></textarea>
+                <label for="personal_message">{{ 'Persoonlijk bericht'|trans }}</label>
+                <textarea id="personal_message" name="personal_message" cols="15"></textarea>
             </div>
-            <a href="#" class="button_blue">Aanvragen</a>
-            <a href="#" class="button_dark_grey">Annuleren</a>
+
+            <a href="#" class="button_blue confirm">{{ 'Aanvragen'|trans }}</a>
+            <a href="#" class="button_dark_grey cancel">{{ 'Annuleren'|trans }}</a>
         </form>
     </div>
 
