--- a/app/Resources/views/groups/all_groups.html.twig
+++ b/app/Resources/views/groups/all_groups.html.twig
@@ -57,8 +57,13 @@
                         <a class="button_member purple" href="#">
                             <span>{{ 'MEMBER'|trans }}</span>
                         </a>
-                    {% elseif group.type == 'grouphub' %}
+                    {% elseif attribute(prospectGrouphubGroups, group.id) is defined %}
                         <a class="button_join purple" href="#">
+                            <span>{{ 'PROSPECT'|trans }}</span>
+                        </a>
+                    {% elseif group.type == 'grouphub' %}
+                        <a class="button_join purple" href="#" data-name="{{ group.name }}"
+                            data-url="{{ path('my_membership_add', {'groupId': group.id}) }}">
                             <span>{{ 'JOIN'|trans }}</span>
                         </a>
                     {% endif %}
