--- a/app/Resources/views/groups.html.twig
+++ b/app/Resources/views/groups.html.twig
@@ -5,14 +5,21 @@
     {{ include(':groups:search.html.twig') }}
 </div>
 
-<section id="group_leave_confirmation" class="modal_container hidden">
-    <div class="modal">
-        <p>{{ 'Deze groep verlaten?'|trans }}</p>
-        <a href="#" class="button_blue pull-left confirm" data-url="">
-            {{ 'Ja'|trans }}
-        </a>
-        <a href="#" class="button_dark_grey pull-right cancel">
-            {{ 'Nee'|trans }}
-        </a>
+<section id="group_leave_confirmation" class="notifications_container hidden">
+    <div class="notifications">
+        <header>
+            <a href="#" class="close_modal close-modal"><i class="fa fa-times"></i></a>
+            <p>{{ 'Leave group'|trans }}</p>
+        </header>
+
+        <article class="notification">
+            <p>{{ 'Deze groep verlaten?'|trans }}</p>
+            <a href="#" class="button_blue confirm" data-url="">
+                {{ 'Ja'|trans }}
+            </a>
+            <a href="#" class="button_dark_grey cancel">
+                {{ 'Nee'|trans }}
+            </a>
+        </article>
     </div>
 </section>
