--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,7 +33,7 @@
         </li>
         <li>
             <a class="button_grey_info" id="notifications_link" href="#">
-                <span>5</span>{{ 'Notifications'|trans }}
+                <span>{{ notifications|length }}</span>{{ 'Notifications'|trans }}
             </a>
         </li>
         <li>
