Updated button, hover behaviour

--- a/app/Resources/views/groups/organisation_groups.html.twig
+++ b/app/Resources/views/groups/organisation_groups.html.twig
@@ -44,11 +44,7 @@
                         <p>{{ group.description }}&nbsp;</p>
                         <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
                     </div>
-                    <div>
-                        <a class="button_edit green" href="#" data-url="{{ path('group_details', {'id': group.id}) }}">
-                            <span>{{ 'EDIT'|trans }}</span>
-                        </a>
-                    </div>
+                    <div></div>
                 </li>
             {% endfor %}
         </ul>
@@ -72,11 +68,7 @@
                         <p>{{ group.description }}&nbsp;</p>
                         <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
                     </div>
-                    <div>
-                        <a class="button_edit green" href="#" data-url="{{ path('group_details', {'id': group.id}) }}">
-                            <span>{{ 'EDIT'|trans }}</span>
-                        </a>
-                    </div>
+                    <div></div>
                 </li>
             {% endfor %}
         </ul>
@@ -90,7 +82,7 @@
 
         <ul>
             {% for group in memberOtherGroups %}
-                <li class="group_section member" data-url="{{ path('group_details', {'id': group.id}) }}">
+                <li class="group_section edit" data-url="{{ path('group_details', {'id': group.id}) }}">
                     <div>
                         <i class="fa fa-user green"></i>
                         <span>12</span>
@@ -100,11 +92,7 @@
                         <p>{{ group.description }}&nbsp;</p>
                         <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
                     </div>
-                    <div>
-                        <a class="button_member green" href="#">
-                            <span>{{ 'MEMBER'|trans }}</span>
-                        </a>
-                    </div>
+                    <div></div>
                 </li>
             {% endfor %}
         </ul>
