--- a/app/Resources/views/groups/my_groups.html.twig
+++ b/app/Resources/views/groups/my_groups.html.twig
@@ -44,11 +44,7 @@
                         <p>{{ group.description }}&nbsp;</p>
                         <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
                     </div>
-                    <div>
-                        <a class="button_edit blue" href="#" data-url="{{ path('group_details', {'id': group.id}) }}">
-                            <span>{{ 'EDIT'|trans }}</span>
-                        </a>
-                    </div>
+                    <div></div>
                 </li>
             {% endfor %}
         </ul>
@@ -72,11 +68,7 @@
                         <p>{{ group.description }}&nbsp;</p>
                         <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
                     </div>
-                    <div>
-                        <a class="button_edit blue" href="#" data-url="{{ path('group_details', {'id': group.id}) }}">
-                            <span>{{ 'EDIT'|trans }}</span>
-                        </a>
-                    </div>
+                    <div></div>
                 </li>
             {% endfor %}
         </ul>
@@ -90,7 +82,7 @@
 
         <ul>
             {% for group in memberGrouphubGroups %}
-                <li class="group_section member" data-url="{{ path('group_details', {'id': group.id}) }}">
+                <li class="group_section edit" data-url="{{ path('group_details', {'id': group.id}) }}">
                     <div>
                         <i class="fa fa-user blue"></i>
                         <span>12</span>
@@ -103,7 +95,7 @@
                     <div>
                         <a class="button_member blue" href="#" data-hover="{{ 'LEAVE'|trans }}"
                            data-url="{{ path('my_membership_delete', {'groupId': group.id}) }}">
-                            <span>{{ 'MEMBER'|trans }}</span>
+                            <span>{{ 'LEAVE'|trans }}</span>
                         </a>
                     </div>
                 </li>
