--- a/app/Resources/views/groups/organisation_groups.html.twig
+++ b/app/Resources/views/groups/organisation_groups.html.twig
@@ -90,7 +90,11 @@
                     <div>
                         <p>{{ group.name }}</p>
                         <p>{{ group.description }}&nbsp;</p>
-                        <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
+                        <p>{{ group.timeStamp|localizeddate('medium', 'none') }}
+                            {% if group.ownerId > 2 %}
+                                - {{ group.owner.name }}
+                            {% endif %}
+                        </p>
                     </div>
                     <div></div>
                 </li>
