--- a/app/Resources/views/groups/organisation_groups.html.twig
+++ b/app/Resources/views/groups/organisation_groups.html.twig
@@ -1,24 +1,9 @@
-<div id="group_organisation_groups" class="group ">
+<div id="group_organisation_groups" class="group" data-url="{{ path('groups', {'type': 'org'}) }}">
 
-    <section class="background_green">
+    <section class="background_green sort">
         <a id="close_organisation_groups" href="#" class="close"><i class="fa fa-times"></i></a>
 
-        <div id="sort_menu_green" class="sort_green">
-            <span><i class="fa fa-sort-amount-asc"></i></span>
-            <span>{{ 'A-Z'|trans }}</span>
-            <span class="sort_container">
-                <span ><i class="fa fa-sort-down"></i></span>
-            </span>
-        </div>
-
-        <div id="sort_drop_down_green" class="hidden sort_drop_down_green">
-            <ul>
-                <li><label for="name_up_green">{{ 'A - Z'|trans }}</label><input type="radio" id="name_up_green" name="sort_green" checked></li>
-                <li><label for="name_down_green">{{ 'Z - A'|trans }}</label><input type="radio" id="name_down_green" name="sort_green"></li>
-                <li><label for="date_up_green">{{ 'Jan - Dec'|trans }}</label><input type="radio" id="date_up_green" name="sort_green"></li>
-                <li><label for="date_down_green">{{ 'Dec - Jan'|trans }}</label><input type="radio" id="date_down_green" name="sort_green"></li>
-            </ul>
-        </div>
+        {% include ':groups:_sort.html.twig' with {'color': 'green'} %}
 
         <div>
             <h3>{{ 'ORGANISATION GROUPS'|trans }}</h3>
